--- a/templates/executorserver/commonprivate.properties.j2
+++ b/templates/executorserver/commonprivate.properties.j2
@@ -1,2 +1,3 @@
 azkaban.native.lib={{ azkaban_exec_server_plugins_jobtypes_dir }}
 execute.as.user={{ azkaban_execute_as_user }}
+memCheck.enabled={{ azkaban_exec_mem_check_enabled }}
